# colour

./: .coveragerc  .gitignore  .pre-commit-config.yaml  BIBLIOGRAPHY.bib  README.rst  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: continuous-integration-quality-unit-tests.yml
colour/: __init__.py
colour/adaptation/: __init__.py  cie1994.py  cmccat2000.py  fairchild1990.py  fairchild2020.py  vonkries.py  zhai2018.py
colour/adaptation/datasets/: __init__.py  cat.py
colour/adaptation/tests/: test__init__.py  test_cie1994.py  test_cmccat2000.py  test_fairchild1990.py  test_fairchild2020.py  test_vonkries.py  test_zhai2018.py
colour/algebra/: __init__.py  common.py  extrapolation.py  interpolation.py  prng.py  regression.py
colour/algebra/coordinates/: __init__.py  transformations.py
colour/algebra/tests/: test_common.py  test_extrapolation.py  test_interpolation.py  test_prng.py  test_regression.py
colour/appearance/: __init__.py  atd95.py  cam16.py  ciecam02.py  ciecam16.py  hellwig2022.py  hke.py  hunt.py  kim2009.py  llab.py  nayatani95.py  rlab.py  zcam.py
colour/appearance/tests/: test_atd95.py  test_cam16.py  test_ciecam02.py  test_ciecam16.py  test_hellwig2022.py  test_hke.py  test_hunt.py  test_kim2009.py  test_nayatani95.py  test_zcam.py
colour/biochemistry/: __init__.py  michaelis_menten.py
colour/biochemistry/tests/: test_michaelis_menten.py
colour/blindness/: __init__.py  machado2009.py
colour/blindness/tests/: test_machado2009.py
colour/characterisation/: __init__.py  aces_it.py  cameras.py  correction.py  displays.py
colour/characterisation/datasets/: __init__.py
colour/characterisation/tests/: test_aces_it.py  test_correction.py
colour/colorimetry/: __init__.py  blackbody.py  cmfs.py  correction.py  dominant.py  generation.py  illuminants.py  lefs.py  lightness.py  luminance.py  photometry.py  spectrum.py  transformations.py  tristimulus_values.py  uniformity.py  whiteness.py  yellowness.py
colour/colorimetry/datasets/: __init__.py
colour/colorimetry/tests/: test_blackbody.py  test_correction.py  test_dominant.py  test_generation.py  test_illuminants.py  test_lefs.py  test_lightness.py  test_luminance.py  test_photometry.py  test_spectrum.py  test_transformations.py  test_tristimulus_values.py  test_uniformity.py  test_whiteness.py  test_yellowness.py
colour/constants/: __init__.py  cie.py  codata.py  common.py
colour/continuous/: __init__.py  abstract.py  multi_signals.py  signal.py
colour/continuous/tests/: test_abstract.py  test_multi_signal.py  test_signal.py
colour/contrast/: __init__.py  barten1999.py
colour/contrast/tests/: test_barten1999.py
colour/corresponding/: __init__.py  prediction.py
colour/corresponding/datasets/: __init__.py  breneman1987.py
colour/corresponding/tests/: test_prediction.py
colour/difference/: __init__.py  cam02_ucs.py  cam16_ucs.py  delta_e.py  din99.py  huang2015.py  stress.py
colour/difference/tests/: test__init__.py  test_cam02_ucs.py  test_cam16_ucs.py  test_delta_e.py  test_din99.py  test_huang2015.py  test_stress.py
colour/examples/characterisation/: examples_aces_it.py
colour/examples/io/: examples_ctl.py
colour/examples/plotting/: examples_blindness.py  examples_characterisation_plots.py  examples_corresponding.py  examples_section_plots.py  examples_tm3018.py  examples_volume_plots.py
colour/geometry/: __init__.py  ellipse.py  intersection.py  primitives.py  section.py  vertices.py
colour/geometry/tests/: test_ellipse.py  test_intersection.py  test_primitives.py  test_section.py  test_vertices.py
colour/graph/: __init__.py  conversion.py
colour/graph/tests/: test_conversion.py
colour/hints/: __init__.py
colour/io/: __init__.py  ctl.py  fichet2021.py  image.py  ocio.py  tabular.py  tm2714.py  uprtek_sekonic.py  xrite.py
colour/io/luts/: __init__.py  cinespace_csp.py  common.py  iridas_cube.py  lut.py  operator.py  resolve_cube.py  sequence.py  sony_spi1d.py  sony_spi3d.py  sony_spimtx.py
colour/io/tests/: test_ctl.py  test_fichet2021.py  test_image.py  test_ocio.py  test_tabular.py  test_tm2714.py  test_uprtek_sekonic.py  test_xrite.py
colour/models/: __init__.py  cam02_ucs.py  cam16_ucs.py  cie_lab.py  cie_luv.py  cie_ucs.py  cie_uvw.py  cie_xyy.py  common.py  din99.py  hdr_cie_lab.py  hdr_ipt.py  hunter_lab.py  hunter_rdab.py  icacb.py  igpgtg.py  ipt.py  jzazbz.py  oklab.py  osa_ucs.py  prolab.py  ragoo2021.py  yrg.py
colour/models/datasets/: __init__.py  macadam_ellipses.py  pointer_gamut.py
colour/models/rgb/: __init__.py  cmyk.py  common.py  cylindrical.py  derivation.py  hanbury2003.py  ictcp.py  itut_h_273.py  prismatic.py  rgb_colourspace.py  ycbcr.py  ycocg.py
colour/models/tests/: test_cam02_ucs.py  test_cam16_ucs.py  test_cie_lab.py  test_cie_luv.py  test_cie_ucs.py  test_cie_uvw.py  test_cie_xyy.py  test_common.py  test_din99.py  test_hdr_cie_lab.py  test_hdr_ipt.py  (+11 more)
colour/notation/: __init__.py  css_color_3.py  hexadecimal.py  munsell.py
colour/phenomena/: __init__.py  rayleigh.py
colour/plotting/: __init__.py  blindness.py  characterisation.py  colorimetry.py  common.py  corresponding.py  diagrams.py  graph.py  models.py  notation.py  phenomena.py  quality.py  section.py  temperature.py  volume.py
colour/quality/: __init__.py  cfi2017.py  cqs.py  cri.py  ssi.py  tm3018.py
colour/recovery/: __init__.py  jakob2019.py  jiang2013.py  mallett2019.py  meng2015.py  otsu2018.py  smits1999.py
colour/temperature/: __init__.py  cie_d.py  hernandez1999.py  kang2002.py  krystek1985.py  mccamy1992.py  ohno2013.py  planck1900.py  robertson1968.py
colour/utilities/: __init__.py  array.py  callback.py  common.py  deprecation.py  documentation.py  metrics.py  network.py  requirements.py  structures.py  verbose.py
colour/volume/: __init__.py  macadam_limits.py  mesh.py  pointer_gamut.py  rgb.py  spectrum.py
docs/: colour.difference.rst  colour.hints.rst  colour.models.rst  conf.py  index.rst  requirements.txt
utilities/: export_todo.py  generate_plots.py  literalise.py  mock_for_colour.py  unicode_to_ascii.py
(+222 files in other folders)
